--- a/package.json
+++ b/package.json
@@ -10,18 +10,30 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
     "@headlessui/react": "^1.7.18",
+    "@mui/material": "^5.15.7",
     "@reduxjs/toolkit": "^2.0.1",
     "axios": "^1.6.5",
+    "classnames": "^2.5.1",
+    "formik": "^2.2.9",
     "moment": "^2.30.1",
+    "nanoid": "^4.0.0",
     "react": "^18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
+    "react-country-flag": "^3.0.2",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.3",
     "react-icons": "^5.0.1",
     "react-redux": "^9.0.4",
-    "react-router-dom": "^6.21.2"
+    "react-router-dom": "^6.21.2",
+    "react-to-print": "^2.14.7",
+    "react-toastify": "^10.0.4",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
+    "@mui/types": "^7.2.13",
     "@types/react": "^18.2.47",
     "@types/react-dom": "^18.2.18",
     "@vitejs/plugin-react": "^4.2.1",
